# Flowcharts

./: .flowchartrc.example  .gitignore  .replit  .tmp_index_script.js  BUGFIXES_2026_02_25.md  CHANGELOG.md  CONTRIBUTING.md  E2E_TESTING_COMPLETE.md  ENHANCEMENT_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  IMPORT_GUIDE.md  KNOWN_ISSUES.md  MANIFEST.in  PHASE1_IMPLEMENTATION.md  PHASE4_5_IMPLEMENTATION.md  PROJECT_STATUS.md  PYPI_DEPLOYMENT.md  QUICKSTART.md  QUICK_PUBLISH_GUIDE.md  README.md  STARTUP_GUIDE.md  TESTING_REPORT.md  WINDOWS_QUICK_START.md  WINDOWS_SETUP.md  fix_formatting.py  pyproject.toml  quickstart.py  replit.nix  requirements.txt  run_all_tests.py  setup.py  setup_dev.bat  setup_dev.sh  test.txt  test_runner.py  validate_code.py  workflow.txt
.devcontainer/: devcontainer.json
.github/workflows/: publish-pypi.yml  test.yml
.tmp/: user-login-312.txt
.tmp/verification/: results.json
Test_Inputs/: AdmarNeuro_Laptop_Setup_Manual.docx  AdmarNeuro_Training_Manual_v2.docx  admar_repair_pipeline_sop.docx  inventory_refurbish_workflow_sop.docx
cli/: __init__.py  batch_command.py  import_command.py  main.py  tutorial_command.py
docs/: BACKEND_HYGIENE.md  IMPLEMENTATION_SUMMARY.md  ISO_5807_SPEC.md  PHASE4_INTERFACE.md  PHASE5_ROUTING.md  QUICK_START.md  USAGE.md
docs/reports/: CONTRIBUTING.md  E2E_TESTING_COMPLETE.md  ENHANCEMENT_IMPLEMENTATION.md  KNOWN_ISSUES.md  PHASE2_3_IMPLEMENTATION.md  PROJECT_STATUS.md  QUICKSTART.md  STARTUP_GUIDE.md  TESTING_REPORT.md  TROUBLESHOOTING.md  WINDOWS_QUICK_START.md
examples/: complex_decision.txt  database_operations.txt  loop_example.txt  simple_workflow.txt  user_authentication.txt  windows_example_workflow.txt
examples/gallery/: README.md
examples/gallery/business/: employee_onboarding.txt  invoice_processing.txt
examples/gallery/healthcare/: medication_admin.txt  patient_intake.txt
examples/gallery/software/: api_request_flow.txt  cicd_pipeline.txt  code_review.txt
src/: __init__.py  capability_detector.py  config_validation.py  models.py  pipeline.py  quality_assurance.py  version_check.py
src/builder/: __init__.py  graph_builder.py  validator.py
src/generator/: __init__.py  mermaid_generator.py
src/importers/: __init__.py  content_extractor.py  document_parser.py  workflow_detector.py
src/parser/: __init__.py  crossref_resolver.py  entity_ruler.py  fallback_parser.py  iso_mapper.py  llm_extractor.py  nlp_parser.py  ollama_extractor.py  patterns.py  workflow_analyzer.py  workflow_detector.py
src/renderer/: __init__.py  d2_renderer.py  graphviz_renderer.py  image_renderer.py  kroki_renderer.py
tests/: __init__.py  conftest.py  test_backend_hygiene.py  test_builder.py  test_config_validation.py  test_e2e.py  test_generator.py  test_import_workflows.py  test_parser.py  test_performance_caches.py  test_quality_assurance.py  test_renderer_graphviz.py  test_web_batch_export_quality.py  test_web_client_export_template.py  test_web_clipboard_usability.py  test_web_generate_overrides.py  test_web_render_export_profiles.py  test_web_startup_bootstrap.py
web/: __init__.py  app.py  async_renderer.py  html_fallback.py  startup.py  websocket_handler.py
web/templates/: index.html
